# PDFMathTranslate

./: .gitignore  pyproject.toml  run.sh
pdf2zh/: __init__.py  cache.py  config.py  converter.py  doclayout.py  gui.py  high_level.py  pdf2zh.py  pdfinterp.py  tokenizer.py  translator.py
pdf2zh/translator/: __init__.py  base.py
pdf2zh/translator/impl/: __init__.py  anythingllm.py  argos.py  azure.py  bing.py  deepl.py  dify.py  google.py  ollama.py  openai.py  qwen_mt.py  tencent.py  xinference.py
pdf2zh/utils/: singleton.py
test/: test_cache.py  test_converter.py  test_translator.py
